# ByeDataClean

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  setup
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_quality_rule_request.md  feature_request.md
.github/workflows/: tests.yml
config/: category_mapping.example.yaml  cleaning_rules.example.yaml  example_business_cleaning_rules.yaml  example_cleaning_rules.yaml  missing_codes.example.yaml  reporter_config.example.yaml  schema.example.yaml
config/cleaning_profiles/: descriptive_analysis.yaml  longitudinal_analysis.yaml  machine_learning.yaml  regression_analysis.yaml
data/examples/: dirty_orders.csv  example_dirty_data.csv
docs/: architecture.md  before_after_validation.md  cleaning_execution.md  cleaning_rules_reference.md  design.md  development.md  example_datasets.md  exporting_quality_checks.md  glossary.md  i_have_a_csv_what_do_i_do.md  installation.md  package_comparison.md  release_checklist.md  reporter_reference.md  roadmap.md  sql_workflow.md  troubleshooting.md  usage.md  yaml_for_beginners.md
docs/assets/: README.md
docs/case_studies/: ecommerce_revenue_quality.md
docs/cleaning_decision_guides/: 01_cleaning_principles.md  02_missing_values.md  03_duplicates_and_units.md  04_outliers.md  05_categorical_variables.md  06_dates_and_time.md  07_schema_and_validation.md  08_analysis_specific_cleaning.md  09_cleaning_decision_log.md  README.md
docs/example_outputs/: ecommerce_cleaning_log_excerpt.md  ecommerce_decision_memo.md  ecommerce_flowchart.md  ecommerce_scorecard.md
docs/templates/: cleaning_decision_log_template.md  decision_memo_template.md
python/: doctor.py  export_quality_checks.py  run_business_impact.py  run_cleaner.py  run_demo.py  run_reporter.py
r/: run_reporter.R
sql/: README.md  dbt_and_soda_notes.md
tests/: test_business_impact.py  test_cleaner_actions.py  test_cleaner_smoke.py  test_config_validation.py  test_export_quality_checks.py  test_flowchart.py  test_full_loop.py  test_reporter_smoke.py  test_scorecard.py
(+42 files in other folders)
