[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "byedataclean"
version = "0.3.0"
description = "A lightweight data-quality toolkit for profiling, cleaning, validating, and documenting tabular datasets with auditable YAML rules and stakeholder-ready summaries."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
examples = ["seaborn>=0.12", "scikit-learn>=1.1"]
profiling = ["skimpy>=0.0.7", "ydata-profiling>=4.0"]
dev = ["pytest>=7.0"]
all = [
    "seaborn>=0.12",
    "scikit-learn>=1.1",
    "skimpy>=0.0.7",
    "ydata-profiling>=4.0",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
